update title on index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.css" style="text/css">
     <link rel="stylesheet" href="css/styles.css" style="text/css">
-    <title>Triangle Tracker</title>
+    <title>Triangle Trackers</title>
   </head>
   <body>
     <form id="formInfo">
